# SAST-Evento-Desktop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  LICENSE  License  README.md  SAST_Evento.qrc  SAST_Evento.rc  qml.qrc  res.qrc
.cmake/: Info.plist.in  InstallerScript.iss.in  version_dll.rc.in  version_exe.rc.in
FluentUI/: CMakeLists.txt  (+1 more)
SAST_Evento/: App.qml  CMakeLists.txt  RCa09740  SAST_Evento.qmlproject  SAST_Evento.qmlproject.qtds  SAST_Evento.rc  application_starter.h  main.cpp  main.qml  qmlmodules
SAST_Evento/FluentUI/framelesshelper/: CMakeLists.txt
SAST_Evento/FluentUI/framelesshelper/cmake/: YY-Thunks.cmake  utils.cmake
SAST_Evento/FluentUI/framelesshelper/src/quick/: quickmicamaterial.cpp
SAST_Evento/FluentUI/src/: CMakeLists.txt
SAST_Evento/application/: README.md  eventocalendar.h  eventoedit.cpp  eventoedit.h  eventoschedule.cpp  eventoschedule.h  mypage.cpp  mypage.h
SAST_Evento/application/service/: baseservice.cpp  baseservice.h  eventservice.cpp  eventservice.h  feedbackservice.cpp  feedbackservice.h  slideimageservice.cpp  slideimageservice.h  userservice.cpp  userservice.h
SAST_Evento/content/: App.qml  Screen01.ui.qml
SAST_Evento/controller/: appinfo.cpp  basecontroller.cpp  basecontroller.h  calendarcontroller.cpp  calendarcontroller.h  eventocontroller.cpp  eventocontroller.h  eventoeditcontroller.cpp  eventoeditcontroller.h  feedbackstatisticscontroller.cpp  feedbackstatisticscontroller.h  logincontroller.cpp  logincontroller.h  mypagecontroller.cpp  mypagecontroller.h  plazacontroller.cpp  plazacontroller.h  profilecontroller.cpp  profilecontroller.h  schedulecontroller.cpp  schedulecontroller.h  usermanagementcontroller.cpp  usermanagementcontroller.h
SAST_Evento/domain/entity/: department.h  evento.h  eventobase.h  eventoblock.h  eventobrief.h  feedback.h  image.h  latestevento.h  loginkey.h  permissionentry.h  schedule.h  slide.h  undertakingevento.h  user.h  userbrief.h
SAST_Evento/domain/exception/: biz_exception.cpp  biz_exception.h
SAST_Evento/domain/model/: eventoblockmodel.cpp  eventoblockmodel.h  eventobriefmodel.cpp  eventobriefmodel.h  feedbackmodel.cpp  feedbackmodel.h  imagemodel.cpp  imagemodel.h  latesteventomodel.cpp  latesteventomodel.h  permissionmodel.cpp  permissionmodel.h  schedulemodel.cpp  schedulemodel.h  slidemodel.cpp  slidemodel.h  slidesmodel.cpp  slidesmodel.h  undertakingeventomodel.cpp  undertakingeventomodel.h  userbriefmodel.cpp  userbriefmodel.h
SAST_Evento/domain/repository/: repository.cpp  repository.h
SAST_Evento/imports/: CMakeLists.txt
SAST_Evento/imports/SAST_Evento/: CMakeLists.txt  Constants.qml  qmldir
SAST_Evento/imports/SAST_Evento/designer/: plugin.metainfo
SAST_Evento/infrastructure/config/: appconfig.cpp  appconfig.h
SAST_Evento/infrastructure/converter/: converter.cpp  converter.h
SAST_Evento/infrastructure/deserialise/: json_deserialise.hpp
SAST_Evento/infrastructure/di/: repository_injector.h  service_injector.h
SAST_Evento/infrastructure/dto/: departmentdto.h  eventdto.h  feedbackdto.h  imagedto.h  locationdto.h  loginkeydto.h  participatedto.h  permissiondto.h  slidedto.h  typedto.h  userdto.h
SAST_Evento/infrastructure/helper/: appinfo.cpp  appinfo.h  circularreveal.cpp  circularreveal.h  common_helper.cpp  common_helper.h  evento_helper.cpp  evento_helper.h  settings_helper.cpp  settings_helper.h  user_helper.cpp  user_helper.h
SAST_Evento/infrastructure/http/: httpclient.cpp  httpclient.h
SAST_Evento/infrastructure/injection/: dependencypool.cpp
SAST_Evento/infrastructure/repository/impl/: RepositoryImpl.cpp  repositoryimpl.cpp  repositoryimpl.h
SAST_Evento/infrastructure/util/: util.hpp
SAST_Evento/lang/: Lang.h
SAST_Evento/qml/: App.qml
SAST_Evento/qml/component/: CustomWindow.qml
SAST_Evento/qml/global/: ItemsFooter.qml  ItemsOriginal.qml  ItemsOriginal_manager.qml  ItemsOriginal_usr.qml
SAST_Evento/qml/page/: T_About.qml  T_Acrylic.qml  T_Badge.qml  T_BreadcrumbBar.qml  T_Buttons.qml  T_CalendarPicker.qml  T_Carousel.qml  T_CheckBox.qml  T_ColorPicker.qml  T_ComboBox.qml  T_DatePicker.qml  T_DepartmentEvents.qml  T_Dialog.qml  T_EventInfo.qml  T_Expander.qml  T_Feedback.qml  T_FlipView.qml  T_Home.qml  T_Http.qml  T_Image.qml  T_InfoBar.qml  T_Menu.qml  T_MultiWindow.qml  T_My.qml  T_Pagination.qml  T_Pivot.qml  T_Plaza.qml  T_Profile.qml  T_Progress.qml  T_RadioButton.qml  T_RatingControl.qml  T_Rectangle.qml  T_RemoteLoader.qml  T_Schedule.qml  T_Settings.qml  T_Slide.qml  T_Slider.qml  T_SouvenirCard.qml  T_StatusView.qml  T_TabView.qml  (+12 more)
SAST_Evento/qml/window/: AboutWindow.qml  HotloadWindow.qml  LoginWindow.qml  MainWindow.qml  SingleInstanceWindow.qml  SingleTaskWindow.qml  StandardWindow.qml
SAST_Evento/src/: AppInfo.cpp  AppInfo.h  import_qml_plugins.h  main.cpp
SAST_Evento/src/application/: eventocalendar.cpp  eventocalendar.h  eventoedit.cpp  eventoedit.h  eventoplaza.cpp  eventoplaza.h  eventoschedule.cpp  eventoschedule.h  mypage.h
SAST_Evento/src/controller/: AppInfo.cpp  AppInfo.h  eventoblockmodel.h  eventobriefmodel.cpp  eventobriefmodel.h  slidesmodel.cpp  slidesmodel.h
SAST_Evento/src/domain/: Evento.h  EventoHistory.h  LatestEvento.h  README.md  UndertakingEvento.h  department.cpp  department.h  evento.cpp  eventobase.h  eventobaseexpand.h  eventoblock.cpp  eventoblock.h  eventobrief.cpp  eventobrief.h  eventohistory.cpp  feedback.cpp  feedback.h  latestevento.cpp  permissionentry.cpp  permissionentry.h  slides.cpp  slides.h  undertakingevento.cpp
SAST_Evento/src/identity/: Identity.cpp  Identity.h
SAST_Evento/src/infrastructure/: README.md
SAST_Evento/src/lang/: En.cpp  Lang.h  Zh.cpp
SAST_Evento/ui/global/: ItemsOriginal_manager.qml  ItemsOriginal_usr.qml  MainEvent.qml  qmldir
SAST_Evento/ui/page/: T_DepartmentEvents.qml  T_EventInfo.qml  T_Feedback.qml  T_My.qml  T_Plaza.qml  T_Profile.qml  T_Schedule.qml  T_Settings.qml  T_Slide.qml  T_SouvenirCard.qml  T_Theme.qml  T_Timesheet.qml  T_UserManage.qml
SAST_Evento/ui/window/: LoginWindow.qml  MainWindow.qml
(+247 files in other folders)
